add_library(LSMTree LSMTree.cpp Utils.h)
add_library(tuple tuple.cpp)
add_library(run run.cpp)
add_library(itoa itoa.cpp)
add_library(level level.cpp)
add_library(FileMeta FileMeta.cpp)
add_library(fencePointer fencePointer.cpp)
add_library(BloomFilter ../BloomFilter/BloomFilter.cpp)
add_library(murmurhash ../BloomFilter/murmurhash.cpp)
add_executable(main main.cpp)
target_link_libraries(main LSMTree tuple run itoa level FileMeta fencePointer BloomFilter murmurhash)
